# translator

./: README.md
backend/: main.py  models.py  pyproject.toml  translate_review.ipynb
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
